hphp/hack/test/typecheck/debug/disable_typechecker.php.exp
File "disable_typechecker.php", line 4, characters 10-10:
Internal error: Type inference for this function has been disabled by the __DisableTypecheckerInternal attribute (Other[0000])
File "disable_typechecker.php", line 10, characters 19-19:
Internal error: Type inference for this function has been disabled by the __DisableTypecheckerInternal attribute (Other[0000])
